# NeuraDeSci

./: .env.example  .gitignore  README.md  hardhat.config.js  next.config.js  package.json
contracts/: NDSToken.sol  NeuroScienceDAO.sol  ResearchCollaboration.sol  ResearchDataRegistry.sol
pages/: index.js
rust-components/: Cargo.toml  README.md  build.sh
rust-components/examples/: index.html  js-integration.js
rust-components/src/: blockchain.rs  crypto.rs  ipfs.rs  lib.rs  neural_data.rs  wasm_bridge.rs
scripts/: deploy.js
styles/: Home.module.css  globals.css
