[package]
name = "neuradesci-core"
version = "0.1.0"
edition = "2021"
authors = ["NeuraDeSci Team <neuradesci@gmail.com>"]
description = "Core Rust components for the NeuraDeSci platform"
license = "MIT"
repository = "https://github.com/NeuraDeSci/NeuraDeSci"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.28", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# WebAssembly
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
console_log = "0.2"
log = "0.4"

# Cryptography
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# IPFS
ipfs-api = { version = "0.17.0", optional = true }

# Blockchain integration
ethers = { version = "2.0", optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
wee_alloc = { version = "0.4.5", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]
full = ["ipfs-api", "ethers"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"] 